--- a/demo.html
+++ b/demo.html
@@ -3,10 +3,10 @@
 
 <head>
 <meta charset="UTF-8"/>
-<title>The Thing</title>
+<title>pingpong</title>
 <script src=scripts/main.js type="module"></script>
 </head>
-<body>
-<canvas id="glcanvas" height="748" width="1350"></canvas>
+<body style="margin: 0; overflow: hidden;">
+<canvas id="glcanvas"></canvas>
 </body>
 </html>
