--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body style="margin: 0; overflow: hidden;">
 <p>läväytä koko näytölle &</p>
-<a href="demo.html">Click, klikkaa, klicka :)</a>
+<a href="demo.html">klikkaa tästä :)</a>
 </body>
 </html>
